--- a/index2.html
+++ b/index2.html
@@ -30,20 +30,20 @@
         <div class="card col-12 col-lg-3 card-pad">
             <img class="card-img-top" src="assets/images/test.jpg" alt="Card image cap">
             <div class="card-body">
-                <a href="#!" class="btn btn-primary receipe-btn">Title Goes Here</a>
+                <a href="#!" class="btn btn-primary receipe-btn" data-toggle="modal" data-target="#basicModal" id="basicModal-1">Title Goes Here</a>
             </div>
         </div>
         <div class="card col-12 col-lg-3 card-pad">
             <img class="card-img-top" src="assets/images/test.jpg" alt="Card image cap">
             <div class="card-body">
-                <a href="#!" class="btn btn-primary receipe-btn">Title Goes Here</a>
+                <a href="#!" class="btn btn-primary receipe-btn" data-toggle="modal" data-target="#basicModal" id="basicModal-2">Title Goes Here</a>
             </div>
         </div>
         <div class="card col-12 col-lg-3 card-pad">
             <img class="card-img-top" src="assets/images/test.jpg" alt="Card image cap">
             <div class="card-body">
 
-                <a href="#!" class="btn btn-primary receipe-btn">Title Goes Here</a>
+                <a href="#!" class="btn btn-primary receipe-btn" data-toggle="modal" data-target="#basicModal" id="basicModal-3">Title Goes Here</a>
             </div>
         </div>
         </div>
@@ -51,19 +51,19 @@
             <div class="card col-12 col-lg-3 card-pad">
                 <img class="card-img-top" src="assets/images/test.jpg" alt="Card image cap">
                 <div class="card-body">
-                    <a href="#!" class="btn btn-primary receipe-btn">Title Goes Here</a>
+                    <a href="#!" class="btn btn-primary receipe-btn" data-toggle="modal" data-target="#basicModal" id="basicModal-4">Title Goes Here</a>
                 </div>
             </div>
             <div class="card col-12 col-lg-3 card-pad">
                 <img class="card-img-top" src="assets/images/test.jpg" alt="Card image cap">
                 <div class="card-body">
-                    <a href="#!" class="btn btn-primary receipe-btn">Title Goes Here</a>
+                    <a href="#!" class="btn btn-primary receipe-btn" data-toggle="modal" data-target="#basicModal" id="basicModal-5">Title Goes Here</a>
                 </div>
             </div>
             <div class="card col-12 col-lg-3 card-pad">
                 <img class="card-img-top" src="assets/images/test.jpg" alt="Card image cap">
                 <div class="card-body">
-                    <a href="#!" class="btn btn-primary receipe-btn">Title Goes Here</a>
+                    <a href="#!" class="btn btn-primary receipe-btn" data-toggle="modal" data-target="#basicModal" id="basicModal-6">Title Goes Here</a>
                 </div>
             </div>
         </div>
@@ -71,78 +71,49 @@
             <div class="card col-12 col-lg-3 card-pad">
                 <img class="card-img-top" src="assets/images/test.jpg" alt="Card image cap">
                 <div class="card-body">
-                    <a href="#!" class="btn btn-primary receipe-btn">Title Goes Here</a>
+                    <a href="#!" class="btn btn-primary receipe-btn" data-toggle="modal" data-target="#basicModal" id="basicModal-7">Title Goes Here</a>
                 </div>
             </div>
             <div class="card col-12 col-lg-3 card-pad">
                 <img class="card-img-top" src="assets/images/test.jpg" alt="Card image cap">
                 <div class="card-body">
-                    <a href="#!" class="btn btn-primary receipe-btn">Title Goes Here</a>
+                    <a href="#!" class="btn btn-primary receipe-btn" data-toggle="modal" data-target="#basicModal" id="basicModal-8">Title Goes Here</a>
                 </div>
             </div>
             <div class="card col-12 col-lg-3 card-pad">
                 <img class="card-img-top" src="assets/images/test.jpg" alt="Card image cap">
                 <div class="card-body">
-                    <a href="#!" class="btn btn-primary receipe-btn">Title Goes Here</a>
+                    <a href="#!" class="btn btn-primary receipe-btn" data-toggle="modal" data-target="#basicModal" id="basicModal-9">Title Goes Here</a>
                 </div>
             </div>
         </div>
         </div>
     </div>
-<<<<<<< HEAD
-=======
-    
-    <!--Receipe button to populate modal-->
-    <a href="#" class="btn btn-lg btn-success" data-toggle="modal" data-target="#basicModal">
-          </a>
-    <!--Modal-->
-    <div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
-            <div class="modal-dialog">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h4 class="modal-title" id="myModalLabel">Receipe</h4>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">×</span>
-                  </button>
-                </div>
-                <div class="modal-body">
-                  <h3>Modal Body</h3>
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
-              </div>
-            </div>
-          </div>
-
-
-
-
-
->>>>>>> 25eea4342b901d70d91c04905e3e55633ec09824
 
     <!--Receipe button to populate modal-->
-    <a href="#" class="btn btn-lg btn-success" data-toggle="modal" data-target="#basicModal">
-    </a>
+    <!-- <a href="#" class="btn btn-lg btn-success" data-toggle="modal" data-target="#basicModal">
+          </a> -->
     <!--Modal-->
     <div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
         <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title" id="myModalLabel">Receipe</h4>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">×</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <h3>Modal Body</h3>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4 class="modal-title" id="myModalLabel">Text</h4>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">×</span>
+              </button>
             </div>
+            <div class="modal-body">
+              <h3>Body Text</h3>
+            </div>
+            <div class="modal-footer">
+                <div id="map"></div>
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+
+            </div>
+          </div>
         </div>
-    </div>
+      </div>
 
 
 
