added some ajax calls, also deleted a jquery call

--- a/index.html
+++ b/index.html
@@ -26,12 +26,6 @@
         <h1>Quick Bytes</h1>
       </div>
     </header>
-<<<<<<< HEAD
-=======
-
-<!-- main carousel -->
-  <div class="carouselWrap col-xs-12">
->>>>>>> cf674ac17d6de28807a0dd56abe85812cb9742fb
         <div class="container-fluid mainSearch">
           <div class="input-group">
             <input type="text" class="form-control col-xs-8" id="ingredient1" placeholder="Enter Ingredient">
@@ -40,7 +34,9 @@
               <span class="plus">&#43;</span>
             </button>
             <div class="input-group-append">
-            <button class="btn btn-dark" onclick="window.location.href='index2.html'" id="recipeSearch" type="button">Find Receipes</button>
+              
+                         <!-- onclick="window.location.href='index2.html'" -->
+            <button class="btn btn-dark"  id="recipeSearch" type="button">Find Receipes</button>
             </div>
           </div>
         </div>
@@ -76,8 +72,6 @@
 <!-- bootstrap js -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
         crossorigin="anonymous">
-      <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
-        crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
         crossorigin="anonymous"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
@@ -85,10 +79,7 @@
 <!-- local js file Link -->
 <!-- <script src="assets/javascript/auth.js"></script> -->
       <script src="assets/javascript/app.js"></script>
-<<<<<<< HEAD
       <script src="assets/javascript/spoonApi.js"></script>
 
-=======
->>>>>>> cf674ac17d6de28807a0dd56abe85812cb9742fb
   </body>
 </html>
