--- a/index2.html
+++ b/index2.html
@@ -131,6 +131,8 @@
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
         crossorigin="anonymous"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCtR9jBUO3uHdJanJp28hI5S6YpZsWl02U&libraries=places&callback=initMap"
+    async defer></script>    
     <!-- local js file Link -->
     <!-- <script src="assets/javascript/auth.js"></script> -->
     <script src="assets/javascript/app.js"></script>
