--- a/index2.html
+++ b/index2.html
@@ -95,23 +95,27 @@
           </a> -->
     <!--Modal-->
     <div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+        <div class="col-12">
         <div class="modal-dialog">
-          <div class="modal-content">
+        <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title" id="myModalLabel">Text</h4>
+              <h4 class="modal-title" id="myModalLabel"><ceneter></ceneter></h4>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">×</span>
               </button>
             </div>
             <div class="modal-body">
-              <h3>Body Text</h3>
+              <h3></h3>
             </div>
             <div class="modal-footer">
                 <div id="map"></div>
-              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <label for="miles" class="searchStores">Search Stores Within:</input>
+                    <input id="miles" type="number">
+              <button type="button" class="btn btn-primary btn-sm" data-dismiss="modal"><center>Go</center></button>
 
             </div>
           </div>
+        </div>
         </div>
       </div>
 
