--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
             <div class="input-group-append">
                 <!-- onclick="window.location.href='index2.html'" -->
             <button class="btn btn-dark" id="recipeSearch" type="button">Find Receipes</button>
-  
             </div>
           </div>
+        </div>
+        <div class="container">
+          <div class="card" id="test"></div>
         </div>
     <div id="carousel" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
