inserted on click to go to second screen

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
               <span class="plus">&#43;</span>
             </button>
             <div class="input-group-append">
-                <!-- onclick="window.location.href='index2.html'" -->
-            <button class="btn btn-dark" id="recipeSearch" type="button">Find Receipes</button>
+                <!--  -->
+            <button class="btn btn-dark" id="recipeSearch" onclick="window.location.href='index2.html'" type="button">Find Receipes</button>
             </div>
           </div>
         </div>
