added timeout to index page

--- a/index2.html
+++ b/index2.html
@@ -30,20 +30,20 @@
         <div class="card col-12 col-lg-3 card-pad">
             <img class="card-img-top" id="recipePic1" alt="Card image cap">
             <div class="card-body">
-                <a href="#!" class="btn btn-primary receipe-btn" data-toggle="modal" data-target="#basicModal" id="basicModal-1">Title Goes Here</a>
+                <a href="#!" class="btn btn-primary receipe-btn truncate" data-toggle="modal" data-target="#basicModal" id="basicModal-1">Title Goes Here</a>
             </div>
         </div>
         <div class="card col-12 col-lg-3 card-pad">
             <img class="card-img-top" id="recipePic2"  src="assets/images/test.jpg" alt="Card image cap">
             <div class="card-body">
-                <a href="#!" class="btn btn-primary receipe-btn" data-toggle="modal" data-target="#basicModal" id="basicModal-2">Title Goes Here</a>
+                <a href="#!" class="btn btn-primary receipe-btn  truncate" data-toggle="modal" data-target="#basicModal" id="basicModal-2">Title Goes Here</a>
             </div>
         </div>
         <div class="card col-12 col-lg-3 card-pad">
             <img class="card-img-top" id="recipePic3"  src="assets/images/test.jpg" alt="Card image cap">
             <div class="card-body">
 
-                <a href="#!" class="btn btn-primary receipe-btn" data-toggle="modal" data-target="#basicModal" id="basicModal-3">Title Goes Here</a>
+                <a href="#!" class="btn btn-primary receipe-btn truncate" data-toggle="modal" data-target="#basicModal" id="basicModal-3">Title Goes Here</a>
             </div>
         </div>
         </div>
@@ -51,19 +51,19 @@
             <div class="card col-12 col-lg-3 card-pad">
                 <img class="card-img-top" id="recipePic4" src="assets/images/test.jpg" alt="Card image cap">
                 <div class="card-body">
-                    <a href="#!" class="btn btn-primary receipe-btn" data-toggle="modal" data-target="#basicModal" id="basicModal-4">Title Goes Here</a>
+                    <a href="#!" class="btn btn-primary receipe-btn truncate" data-toggle="modal" data-target="#basicModal" id="basicModal-4">Title Goes Here</a>
                 </div>
             </div>
             <div class="card col-12 col-lg-3 card-pad">
                 <img class="card-img-top" id="recipePic5"  src="assets/images/test.jpg" alt="Card image cap">
                 <div class="card-body">
-                    <a href="#!" class="btn btn-primary receipe-btn" data-toggle="modal" data-target="#basicModal" id="basicModal-5">Title Goes Here</a>
+                    <a href="#!" class="btn btn-primary receipe-btn truncate" data-toggle="modal" data-target="#basicModal" id="basicModal-5">Title Goes Here</a>
                 </div>
             </div>
             <div class="card col-12 col-lg-3 card-pad">
                 <img class="card-img-top" id="recipePic6"  src="assets/images/test.jpg" alt="Card image cap">
                 <div class="card-body">
-                    <a href="#!" class="btn btn-primary receipe-btn" data-toggle="modal" data-target="#basicModal" id="basicModal-6">Title Goes Here</a>
+                    <a href="#!" class="btn btn-primary receipe-btn truncate" data-toggle="modal" data-target="#basicModal" id="basicModal-6">Title Goes Here</a>
                 </div>
             </div>
         </div>
@@ -71,19 +71,19 @@
             <div class="card col-12 col-lg-3 card-pad">
                 <img class="card-img-top" id="recipePic7"  src="assets/images/test.jpg" alt="Card image cap">
                 <div class="card-body">
-                    <a href="#!" class="btn btn-primary receipe-btn" data-toggle="modal" data-target="#basicModal" id="basicModal-7">Title Goes Here</a>
+                    <a href="#!" class="btn btn-primary receipe-btn truncate" data-toggle="modal" data-target="#basicModal" id="basicModal-7">Title Goes Here</a>
                 </div>
             </div>
             <div class="card col-12 col-lg-3 card-pad">
                 <img class="card-img-top" id="recipePic8"  src="assets/images/test.jpg" alt="Card image cap">
                 <div class="card-body">
-                    <a href="#!" class="btn btn-primary receipe-btn" data-toggle="modal" data-target="#basicModal" id="basicModal-8">Title Goes Here</a>
+                    <a href="#!" class="btn btn-primary receipe-btn truncate" data-toggle="modal" data-target="#basicModal" id="basicModal-8">Title Goes Here</a>
                 </div>
             </div>
             <div class="card col-12 col-lg-3 card-pad">
                 <img class="card-img-top" id="recipePic9"  src="assets/images/test.jpg" alt="Card image cap">
                 <div class="card-body">
-                    <a href="#!" class="btn btn-primary receipe-btn" data-toggle="modal" data-target="#basicModal" id="basicModal-9">Title Goes Here</a>
+                    <a href="#!" class="btn btn-primary receipe-btn truncate" data-toggle="modal" data-target="#basicModal" id="basicModal-9">Title Goes Here</a>
                 </div>
             </div>
         </div>
