added loading spinner

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </button>
             <div class="input-group-append">
                 <!--  -->
-            <button class="btn btn-dark" id="recipeSearch" onclick="secondPageLoad()" type="button">Find Receipes</button>
+            <button class="btn btn-dark" id="recipeSearch" onclick="secondPageLoad();loading();" type="button">Find Receipes  <i class="fa fa-spinner" id="spin"> </i></button>
             </div>
           </div>
         </div>
