--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
               <span class="plus">&#43;</span>
             </button>
             <div class="input-group-append">
-                <!--  -->
-            <button class="btn btn-dark" id="recipeSearch" onclick="secondPageLoad();loading();" type="button">Find Receipes  <i class="fa fa-spinner" id="spin"> </i></button>
+                <!-- onclick="secondPageLoad();loading();" -->
+            <button class="btn btn-dark" id="recipeSearch"  type="button">Find Receipes  <i class="fa fa-spinner" id="spin"> </i></button>
             </div>
           </div>
         </div>
