--- a/index2.html
+++ b/index2.html
@@ -121,7 +121,7 @@
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span></button>
                 </div>
-                <div class="modal-body"></div>
+                <div class="modal-body"id="modal-body"></div>
                 <div class="modal-footer storeFind">
                 <label for="miles" id="getStores" class="searchStores">Search Stores Within
                     <input id="miles" type="number">Miles
