--- a/index.html
+++ b/index.html
@@ -26,22 +26,20 @@
         <h1>Quick Bytes</h1>
       </div>
     </header>
-
 <!-- main carousel -->
-  <div class="carouselWrap col-xs-12">
-        <div class="container-fluid mainSearch">
-          <div class="input-group">
-            <input type="text" class="form-control col-xs-8" id="ingredient1" placeholder="Enter Ingredient">
-            <button type="button" class="btn btn-default" id="addMore" data-toggle="dropdown" aria-expanded="false">
-              <span class="tooltiptext">Add More!</span>
-              <span class="plus">&#43;</span>
-            </button>
-            <div class="input-group-append">
-                <!--  -->
-            <button class="btn btn-dark" id="recipeSearch" onclick="secondPageLoad();loading();" type="button">Find Receipes  <i class="fa fa-spinner" id="spin"> </i></button>
-            </div>
-          </div>
-        </div>
+  <div class="input-group mainSearch">
+    <input type="text" class="form-control" id="ingredient1" placeholder="Enter Ingredient">
+    <button type="button" class="btn btn-default" id="addMore" data-toggle="dropdown" aria-expanded="false">
+      <span class="tooltiptext">Add More!</span>
+      <span class="plus">&#43;</span>
+    </button>
+    <div class="input-group-append">
+      <button class="btn btn-dark" id="recipeSearch" onclick="secondPageLoad();loading();" type="button">Find Receipes
+        <i class="fa fa-spinner" id="spin"> </i>
+      </button>
+    </div>
+</div>
+  <div class="carouselWrap col-12">
     <div id="carousel" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -60,6 +58,27 @@
           <img class="d-block w-100 carouselImg" src="assets/images/pic5.jpg"  alt="Fifth slide">
         </div>
       </div>
+    </div>
+  </div>
+  <!-- Favorites Modal -->
+  <div class="favBtn">
+  <button class="btn btn-dark" data-toggle="modal" data-target="#favoritesModal" type="button">Your Favorites
+  </button>
+  </div>
+
+  <div class="modal fade" id="favoritesModal" role="dialog">
+    <div class="modal-dialog modal-lg">
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Favorite Receipes</h4>
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+        <div class="modal-body">
+          <p>Some text in the modal.</p>
+        </div>
+      </div>
+  
     </div>
   </div>
 
