--- a/index2.html
+++ b/index2.html
@@ -122,11 +122,13 @@
                     <span aria-hidden="true">&times;</span></button>
                 </div>
                 <div class="modal-body" id="modal-body"></div>
-                <div class="modal-footer storeFind">
+                <div class="modal-footer storeFind center">
+
                 <label for="miles" id="getStores" class="searchStores">Search Stores Within
                     <input id="miles" type="number">Miles
-                    <button type="button" id="mapBtn" class="btn btn-primary btn-sm"><center>Go</center></button></label>
+                    <button type="button" id="mapBtn" class="btn btn-dark btn-sm "><center>Go</center></button></label>
                 </div>
+
                 <div class="modal-footer">
                     <div id="map"></div>
                 </div>
