added fav button

--- a/index2.html
+++ b/index2.html
@@ -42,18 +42,21 @@
         <div class="row text-center inner2 ">
         <div class="card col-12 col-lg-3 card-pad">
             <img class="card-img-top" id="recipePic1" alt="">
+            <span id="addFav">&#9829;<span class="tooltipfav">Add to Favorites!</span></span>
             <div class="card-body">
                 <a href="#!" class="btn btn-primary recipe-btn truncate" data-target=".bd-example-modal-lg" id="basicModal-1"></a>
             </div>
         </div>
         <div class="card col-12 col-lg-3 card-pad">
             <img class="card-img-top" id="recipePic2"  src="" alt="">
+            <span id="addFav">&#9829;<span class="tooltipfav">Add to Favorites!</span></span>
             <div class="card-body">
                 <a href="#!" class="btn btn-primary recipe-btn  truncate" data-target=".bd-example-modal-lg" id="basicModal-2"></a>
             </div>
         </div>
         <div class="card col-12 col-lg-3 card-pad">
             <img class="card-img-top" id="recipePic3"  src="" alt="">
+            <span id="addFav">&#9829;<span class="tooltipfav">Add to Favorites!</span></span>
             <div class="card-body">
                 <a href="#!" class="btn btn-primary recipe-btn truncate" data-target=".bd-example-modal-lg" id="basicModal-3"></a>
             </div>
@@ -62,18 +65,21 @@
         <div class="row text-center inner2">
             <div class="card col-12 col-lg-3 card-pad">
                 <img class="card-img-top" id="recipePic4" src="" alt="">
+                <span id="addFav">&#9829;<span class="tooltipfav">Add to Favorites!</span></span>
                 <div class="card-body">
                     <a href="#!" class="btn btn-primary recipe-btn truncate" data-target=".bd-example-modal-lg" id="basicModal-4"></a>
                 </div>
             </div>
             <div class="card col-12 col-lg-3 card-pad">
                 <img class="card-img-top" id="recipePic5"  src="" alt="">
+                <span id="addFav">&#9829;<span class="tooltipfav">Add to Favorites!</span></span>
                 <div class="card-body">
                     <a href="#!" class="btn btn-primary recipe-btn truncate" data-target=".bd-example-modal-lg" id="basicModal-5"></a>
                 </div>
             </div>
             <div class="card col-12 col-lg-3 card-pad">
                 <img class="card-img-top" id="recipePic6"  src="" alt="">
+                <span id="addFav">&#9829;<span class="tooltipfav">Add to Favorites!</span></span>
                 <div class="card-body">
                     <a href="#!" class="btn btn-primary recipe-btn truncate" data-target=".bd-example-modal-lg" id="basicModal-6"></a>
                 </div>
@@ -82,18 +88,21 @@
         <div class="row text-center inner2">
             <div class="card col-12 col-lg-3 card-pad">
                 <img class="card-img-top" id="recipePic7"  src="" alt="">
+                <span id="addFav">&#9829;<span class="tooltipfav">Add to Favorites!</span></span>
                 <div class="card-body">
                     <a href="#!" class="btn btn-primary recipe-btn truncate" data-target=".bd-example-modal-lg" id="basicModal-7"></a>
                 </div>
             </div>
             <div class="card col-12 col-lg-3 card-pad">
                 <img class="card-img-top" id="recipePic8"  src="" alt="">
+                <span id="addFav">&#9829;<span class="tooltipfav">Add to Favorites!</span></span>
                 <div class="card-body">
                     <a href="#!" class="btn btn-primary recipe-btn truncate" data-target=".bd-example-modal-lg" id="basicModal-8"></a>
                 </div>
             </div>
             <div class="card col-12 col-lg-3 card-pad">
                 <img class="card-img-top" id="recipePic9"  src="" alt="">
+                <span id="addFav">&#9829;<span class="tooltipfav">Add to Favorites!</span></span>
                 <div class="card-body">
                     <a href="#!" class="btn btn-primary recipe-btn truncate" data-target=".bd-example-modal-lg" id="basicModal-9"></a>
                 </div>
