added fonts to modals

--- a/index2.html
+++ b/index2.html
@@ -20,6 +20,8 @@
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <!-- font -->
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Tinos" rel="stylesheet">
     <title>Quick Bytes</title>
 </head>
 
@@ -150,7 +152,7 @@
                     </button>
                 </div>
                 <div class="modal-body" id="modal-body">
-                    <div class="container">
+                    <div class="container modal-text">
                         <div class="row">
                             <h2 class="col-md-8" id="title"></h2>
                             <p class="offset-md-2 col-md-2">
